--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,24 @@
-version: '3.4'
 services:
   jorani:
     build: .
     ports:
       - "9698:80"
     environment:
-      - MYSQL_HOST=mysql
-      - MYSQL_DATABASE=jorani
-      - MYSQL_USER=jorani
-      - MYSQL_PASSWORD=jorani
+      MYSQL_HOST: mysql
+      MYSQL_DATABASE: jorani
+      MYSQL_USER: jorani
+      MYSQL_PASSWORD: jorani
+    depends_on:
+      - mysql
+
   mysql:
     image: mysql:8
     ports:
       - "3306:3306"
     environment:
-      - MYSQL_ROOT_PASSWORD=jorani
-      - MYSQL_DATABASE=jorani
-      - MYSQL_USER=jorani
-      - MYSQL_PASSWORD=jorani
+      MYSQL_ROOT_PASSWORD: jorani
+      MYSQL_DATABASE: jorani
+      MYSQL_USER: jorani
+      MYSQL_PASSWORD: jorani
     volumes:
-      - ./sql/jorani.sql:/docker-entrypoint-initdb.d/jorani.sql
+      - ./sql/jorani.sql:/docker-entrypoint-initdb.d/jorani.sql:ro
